kube_develop/kube_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kwetservice
  namespace: kwetter-develop
spec:
  selector:
    app: kwetservice
  ports:
  - port: 80
    targetPort: 80
